--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header {
 .lucide-dumbbell {
   color: #c50e0e;
   animation: float 3s ease-in-out infinite;
-  width: 40px;
-  height: 40px;
+  width: 4rem;
+  height: 4rem;
 }
 
 .logo-text {
@@ -132,7 +132,7 @@ header {
 }
 
 .feature-card:hover {
-  transform: translate(0, -15px);
+  transform: translate(0, -1.5rem);
 }
 
 .lucide-users,
@@ -184,7 +184,7 @@ header {
 
 .image-card {
   /* max-width: 0px; */
-  height: 400px;
+  height: 40rem;
   border-radius: 1.8rem;
   position: relative;
   overflow: hidden;
@@ -194,7 +194,7 @@ header {
 }
 
 .image-card:hover .card-img {
-  transform: scale(1.1) translate(-10px, -10px);
+  transform: scale(1.1) translate(-1rem, -1rem);
 }
 
 .image-card::before {
@@ -300,7 +300,7 @@ header {
 }
 
 .testimonial-card:hover {
-  transform: translate(0, -15px);
+  transform: translate(0, -1.5rem);
 }
 
 .author {
@@ -310,8 +310,8 @@ header {
 
 .author-img {
   background-color: #171717;
-  width: 64px;
-  height: 64px;
+  width: 6.4rem;
+  height: 6.4rem;
   border-radius: 50%;
   border: solid 2px #f97316;
   object-fit: cover;
@@ -348,7 +348,7 @@ header {
 
 .lucide-star {
   /* height: 24px; */
-  width: 20px;
+  width: 2rem;
   fill: #ef4444;
   stroke: #ef4444;
 }
@@ -370,7 +370,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
-  border-radius: 10px;
+  border-radius: 1rem;
   padding: 3.2rem;
   background-color: rgb(255 255 255 / 0.1);
   width: 35%;
@@ -381,7 +381,7 @@ header {
 }
 
 .plan-card:hover {
-  transform: translate(0, -20px);
+  transform: translate(0, -2rem);
 }
 
 .premium-card {
@@ -398,7 +398,7 @@ header {
 
 
 .plan-price {
-  margin: 0 0 2.4em 0;
+  margin: 0 0 2.4rem 0;
   display: flex;
   /* align-items: end; */
 }
@@ -437,7 +437,7 @@ header {
   line-height: 1.5;
   display: flex;
   gap: 1rem;
-  ;
+
 }
 
 
@@ -446,7 +446,7 @@ header {
 }
 
 .lucide-check {
-  height: 20px;
+  height: 2rem;
   /* color: #ef4444; */
   /* fill: #ef4444; */
   stroke: #ef4444;
