--- a/queries.css
+++ b/queries.css
@@ -103,3 +103,116 @@
     padding: 1.4rem;
   }
 }
+
+@media (max-width:25em) {
+  html {
+    font-size: 25%;
+  }
+
+  .section-hero {
+    height: 40vh;
+  }
+
+
+  .hero-main {
+    text-align: center;
+    max-width: 100vw;
+    padding: 3.2rem 9.2rem;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-text h1 {
+    font-size: 4.4rem;
+  }
+
+  .hero-description {
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 3.2rem;
+  }
+
+  .feature-card {
+    padding: 1.8rem;
+  }
+
+  .lucide-users,
+  .lucide-timer,
+  .lucide-trophy {
+    padding: .8rem;
+    width: 20%;
+    height: 20%;
+    /* height: .4rem;
+    width: .4rem; */
+  }
+
+  .feature-description {
+    font-size: 1rem;
+  }
+
+
+  .author-name {
+    font-size: 1.2rem;
+  }
+
+  .member-details {
+    font-size: 1rem;
+  }
+
+  .author-description {
+    font-size: 1rem;
+  }
+
+  .plan-features li {
+    font-size: 1rem;
+    /* line-height: 1; */
+
+  }
+
+  .plan-card {
+    padding: 1.8rem;
+
+  }
+
+  .plan-price {
+    margin: 0 0 .4rem 0;
+    /* align-items: end; */
+  }
+
+  .price {
+    font-size: 2.8rem;
+  }
+
+  .plan-features {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    gap: .8rem;
+    margin: 0 0 1.2rem 0;
+
+    padding: 0;
+  }
+
+  .plan-features li {
+    font-size: 1rem;
+    gap: .2rem;
+
+  }
+
+  .testimonial-card {
+    /*
+    max-width: 35rem; */
+    padding: 1.4rem;
+  }
+
+  .image-card {
+    /* max-width: 0px; */
+    height: 20rem;
+  }
+}
