--- a/style.css
+++ b/style.css
@@ -400,8 +400,10 @@ header {
 .plan-price {
   margin: 0 0 2.4rem 0;
   display: flex;
-  /* align-items: end; */
+  align-items: end;
 }
+
+
 
 .price {
   font-size: 4.8rem;
@@ -415,7 +417,7 @@ header {
 
 .price-description {
   font-size: 1.2rem;
-  margin: 0;
+  margin: 0 0 .6rem 0;
   color: #d1d5db !important;
 
   /* vertical-align: sub; */
